[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-enhanced-lwe"
version = "1.0.0"
description = "A quantum-resistant encryption system using Learning With Errors"
readme = "README.md"
authors = [{name = "Matt Dixon", email = "dxn000@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]