[metadata]
description-file = README.md

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --cov=quantum_enhanced_lwe --cov-report=term-missing

[coverage:run]
source = quantum_enhanced_lwe

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError